--- a/public/explore.html
+++ b/public/explore.html
@@ -193,8 +193,9 @@
 
     <script>
         const STORAGE_KEY_HISTORY = 'philingo_text_history';
-        const STORAGE_KEY_API = 'gemini_api_key';
-        const STORAGE_KEY_PROVIDER = 'api_provider';
+        const STORAGE_KEY_API_GEMINI = 'philingo_api_key_gemini';
+        const STORAGE_KEY_API_OPENAI = 'philingo_api_key_openai';
+        const STORAGE_KEY_PROVIDER = 'philingo_current_provider';
         
         // Text snippets for practice
         const textSnippets = [
@@ -465,8 +466,10 @@
             }
 
             // Check API key and provider
-            const apiKey = localStorage.getItem(STORAGE_KEY_API);
             const apiProvider = localStorage.getItem(STORAGE_KEY_PROVIDER) || 'gemini';
+            const apiKey = apiProvider === 'gemini'
+                ? localStorage.getItem(STORAGE_KEY_API_GEMINI)
+                : localStorage.getItem(STORAGE_KEY_API_OPENAI);
             
             if (!apiKey) {
                 showError('Please configure your API key in the main app first.');
